# Soltrust

./: Cargo.toml  README.md
src/: adapter.rs  main.rs  soltrust.graphql  util.rs  vertex.rs
src/lints/: divide_before_multiply.ron  floating_pragma.ron  unprotected_self_destruct.ron
src/parser/: ast.rs  mod.rs  vertex.rs
test/: selfdestruct.json
