[package]
name = "soltrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
lazy_static = "1.4.0"
ron = "0.8.0"
serde = "1.0.162"
serde_json = "1.0.96"
solc-ast = { git = "https://github.com/hrkrshnn/solc-ast-rs.git", version = "0.1.0" }
trustfall = "0.3.4"
